# onet-scraper

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  analysis_report.txt  analyze_data.py  autostart_stderr_conv.txt  autostart_verify.txt  autostart_verify_utf8.txt  check_fields.py  check_proxy.py  check_proxy_output.txt  check_quality.py  check_simple.py  check_url.py  current_data_head.txt  data_head_check.txt  debug_test.py  docker-compose.yml  final_report.py  final_test_log.txt  inspect_article.py  mypy_errors.txt  mypy_errors_utf8.txt  mypy_report.txt  pola_raport.txt  pre_commit_output.txt  pyproject.toml  pytest.ini  pytest_errors_utf8.txt  pytest_final_fail.txt  pytest_verification_errors.txt  raport_jakosci.txt  raport_naprawy_tagow.md  requirements.txt  ruff_errors.txt  run_output.txt  (+11 more)
.github/workflows/: ci.yml
onet_scraper/: items.py  loaders.py  middlewares.py  pipelines.py  settings.py
onet_scraper/spiders/: onet.py
onet_scraper/utils/: extractors.py  text_cleaners.py
scripts/: cleanup_files.py
tests/: conftest.py  test_items.py  test_middlewares.py  test_middlewares_softban.py  test_pipelines.py  test_rules.py  test_utils_cleaners.py  test_utils_extractors.py
tests/test_spiders/: test_onet_spider.py
tor_data/: cached-certs  cached-microdesc-consensus  cached-microdescs.new  control_auth_cookie  state
